Add buttons for adding groups and websites

--- a/app/index.html
+++ b/app/index.html
@@ -17,13 +17,24 @@
 </head>
 <body>
 
+  <main class="container">
+    <section class="row">
 
-  
+      <!-- Add website and add group buttons -->
+      <section class="col-sm-3 col-xs-offset-1 controls">
+        <div class="well">
+          <button class="btn btn-primary btn-block">
+            Add site
+          </button>
+          <button class="btn btn-primary btn-block">
+            Add group
+          </button>
+        </div>
+      </section>
 
-
-
-
-
+      
+    </section>
+  </main>
 
 
   <!--[if lt IE 7]>
