--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,7 @@
     <section class="row">
 
       <!-- Add website and add group buttons -->
-      <section class="col-sm-3 col-xs-offset-1 controls">
+      <section class="col-sm-3 col-sm-offset-1 controls">
         <div class="well">
           <button class="btn btn-primary btn-block">
             Add site
@@ -32,7 +32,7 @@
         </div>
       </section>
 
-      
+
     </section>
   </main>
 
