Add list of groups section

--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,7 @@
       <!-- Add website and add group buttons -->
       <section class="col-sm-3 col-sm-offset-1 controls">
         <div class="well">
-          <button class="btn btn-primary btn-block">
+          <button type="button" class="btn btn-primary btn-block">
             Add site
           </button>
           <button class="btn btn-primary btn-block">
@@ -32,6 +32,17 @@
         </div>
       </section>
 
+      <!-- Website groups -->
+      <section class="col-sm-4" id="groups">
+        <div class="list-group">
+          <button type="button" class="list-group-item active">
+          All websites <span class="badge">0</span>
+          </button>
+          <button type="button" class="list-group-item">
+            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Add website
+          </button>
+        </div>
+      </section>
 
     </section>
   </main>
