Add a notice when you have no websites defined

--- a/app/index.html
+++ b/app/index.html
@@ -44,7 +44,18 @@
         </div>
       </section>
 
-    </section>
+      <!-- "You have no websites" well -->
+      <section class="col-sm-4">
+        <div class="well">
+          You have no websites
+          <button class="btn btn-primary">
+            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+            Add one now!
+          </button>
+        </div>
+      </section>
+
+    </section> <!-- </row> -->
   </main>
 
 
