Indicate where the main container ends with a comment

--- a/app/index.html
+++ b/app/index.html
@@ -55,8 +55,8 @@
         </div>
       </section>
 
-    </section> <!-- </row> -->
-  </main>
+    </section> <!-- /.row -->
+  </main> <!-- /.container -->
 
   <!-- Add website modal -->
   <div class="modal fade" id="website-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
