--- a/app/index.html
+++ b/app/index.html
@@ -64,10 +64,49 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+          <h4 class="modal-title" id="myModalLabel">Add site</h4>
         </div>
         <div class="modal-body">
-          ...
+
+          <!-- Website modal form group -->
+          <form class="form-horizontal">
+            <div class="form-group">
+              <label for="website-url" class="col-sm-2 control-label">Site URL</label>
+              <div class="col-sm-10">
+                <input type="text" class="form-control" id="website-url">
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="website-color" class="col-sm-2 control-label">Site color</label>
+              <div class="col-sm-10">
+                <select class="form-control" id="website-color">
+                  <option>- None -</option>
+                  <option>Red</option>
+                  <option>Green</option>
+                  <option>Blue</option>
+                  <option>Yellow</option>
+                  <option>Orange</option>
+                </select>
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="pick-group" class="col-sm-2 control-label">Groups</label>
+              <div class="col-sm-10" id="pick-group">
+                <div class="checkbox">
+                  <label>
+                    <input type="checkbox" value="">
+                    Social sites
+                  </label>
+                </div>
+                <div class="checkbox">
+                  <label>
+                    <input type="checkbox" value="">
+                    Search engines
+                  </label>
+                </div>
+              </div>
+            </div>
+          </form>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
