Add comments to modal and css

--- a/app/index.html
+++ b/app/index.html
@@ -68,7 +68,7 @@
         </div>
         <div class="modal-body">
 
-          <!-- Website modal form group -->
+          <!-- Website URL form -->
           <form class="form-horizontal">
             <div class="form-group">
               <label for="website-url" class="col-sm-2 control-label">Site URL</label>
@@ -76,6 +76,8 @@
                 <input type="text" class="form-control" id="website-url">
               </div>
             </div>
+
+            <!-- Website color form -->
             <div class="form-group">
               <label for="website-color" class="col-sm-2 control-label">Site color</label>
               <div class="col-sm-10">
@@ -89,6 +91,8 @@
                 </select>
               </div>
             </div>
+
+            <!-- Website group form -->
             <div class="form-group">
               <label for="pick-group" class="col-sm-2 control-label">Groups</label>
               <div class="col-sm-10" id="pick-group">
