--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,7 @@
           <button type="button" class="btn btn-primary btn-block" data-toggle="modal" data-target="#website-modal">
             Add site
           </button>
-          <button class="btn btn-primary btn-block">
+          <button class="btn btn-primary btn-block" data-toggle="modal" data-target="#group-modal">
             Add group
           </button>
         </div>
@@ -111,6 +111,35 @@
               </div>
             </div>
           </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Add group modal -->
+  <div class="modal fade" id="group-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title" id="myModalLabel">Add group</h4>
+        </div>
+        <div class="modal-body">
+
+          <!-- Group name form -->
+          <form class="form-horizontal">
+            <div class="form-group">
+              <label for="group-name" class="col-sm-3 control-label">Group name</label>
+              <div class="col-sm-9">
+                <input type="text" class="form-control" id="group-name">
+              </div>
+            </div>
+          </form>
+
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
