--- a/app/index.html
+++ b/app/index.html
@@ -130,15 +130,32 @@
         </div>
         <div class="modal-body">
 
-          <!-- Group name form -->
           <form class="form-horizontal">
+
+            <!-- Group name form -->
             <div class="form-group">
               <label for="group-name" class="col-sm-3 control-label">Group name</label>
               <div class="col-sm-9">
                 <input type="text" class="form-control" id="group-name">
               </div>
             </div>
+
+            <!-- Group color form -->
+            <div class="form-group">
+              <label for="group-color" class="col-sm-3 control-label">Group color</label>
+              <div class="col-sm-9">
+                <select class="form-control" id="group-color">
+                  <option>- None -</option>
+                  <option>Red</option>
+                  <option>Green</option>
+                  <option>Blue</option>
+                  <option>Yellow</option>
+                  <option>Orange</option>
+                </select>
+              </div>
+            </div>
           </form>
+
 
         </div>
         <div class="modal-footer">
