Add edit and delete buttons beneath the table

--- a/app/index.html
+++ b/app/index.html
@@ -67,6 +67,8 @@
             <td> Delete </td>
           </tr>
         </table>
+        <button type="button" class="btn btn-default">Edit</button>
+        <button type="button" class="btn btn-danger">Delete</button>
       </section>
 
     </section> <!-- /.row -->
