Change button attribute to refer to right modal

--- a/app/index.html
+++ b/app/index.html
@@ -50,8 +50,8 @@
             </button>
           </div>
 
-          <button type="button" class="list-group-item" data-toggle="modal" data-target="#website-modal">
-            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Add website
+          <button type="button" class="list-group-item" data-toggle="modal" data-target="#group-modal">
+            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Add group
           </button>
         </div>
       </section>
