--- a/app/index.html
+++ b/app/index.html
@@ -111,12 +111,12 @@
               <label for="website-color" class="col-sm-2 control-label">Site color</label>
               <div class="col-sm-10">
                 <select class="form-control" id="website-color">
-                  <option>- None -</option>
-                  <option>Red</option>
-                  <option>Green</option>
-                  <option>Blue</option>
-                  <option>Yellow</option>
-                  <option>Orange</option>
+                  <option value="1">- None -</option>
+                  <option value="2">Red</option>
+                  <option value="3">Green</option>
+                  <option value="4">Blue</option>
+                  <option value="5">Yellow</option>
+                  <option value="6">Orange</option>
                 </select>
               </div>
             </div>
