--- a/app/index.html
+++ b/app/index.html
@@ -98,11 +98,11 @@
         <div class="modal-body">
 
           <!-- Website URL form -->
-          <form class="form-horizontal">
+          <form class="form-horizontal" ng-submit="main.addSite()">
             <div class="form-group">
               <label for="website-url" class="col-sm-2 control-label">Site URL</label>
               <div class="col-sm-10">
-                <input type="text" class="form-control" id="website-url">
+                <input ng-model="main.url" type="text" class="form-control" id="website-url">
               </div>
             </div>
 
@@ -110,13 +110,13 @@
             <div class="form-group">
               <label for="website-color" class="col-sm-2 control-label">Site color</label>
               <div class="col-sm-10">
-                <select class="form-control" id="website-color">
-                  <option value="1">- None -</option>
-                  <option value="2">Red</option>
-                  <option value="3">Green</option>
-                  <option value="4">Blue</option>
-                  <option value="5">Yellow</option>
-                  <option value="6">Orange</option>
+                <select name="selectColor" id="selectColor" class="form-control" ng-model="main.color">
+                  <option value="">- None -</option>
+                  <option value="red">Red</option>
+                  <option value="green">Green</option>
+                  <option value="blue">Blue</option>
+                  <option value="yellow">Yellow</option>
+                  <option value="orange">Orange</option>
                 </select>
               </div>
             </div>
@@ -139,12 +139,13 @@
                 </div>
               </div>
             </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+              <button type="submit" class="btn btn-primary">Save changes</button>
+            </div>
           </form>
         </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
-        </div>
+
       </div>
     </div>
   </div>
