--- a/app/index.html
+++ b/app/index.html
@@ -125,18 +125,22 @@
             <div class="form-group">
               <label for="pick-group" class="col-sm-2 control-label">Groups</label>
               <div class="col-sm-10" id="pick-group">
-                <div class="checkbox">
-                  <label>
-                    <input type="checkbox" value="">
-                    Social sites
-                  </label>
+
+                <div ng-repeat="group in main.groups">
+                  <div class="checkbox">
+                    <label>
+                      <input
+                        type="checkbox"
+                        name="selectedGroups[]"
+                        value="{{ group.name }}"
+                        ng-checked="selection.indexOf(group.name) > -1"
+                        ng-click="toggleSelection(group.name)"
+                      >
+                      {{ group.name }}
+                    </label>
+                  </div>
                 </div>
-                <div class="checkbox">
-                  <label>
-                    <input type="checkbox" value="">
-                    Search engines
-                  </label>
-                </div>
+                
               </div>
             </div>
             <div class="modal-footer">
