--- a/app/index.html
+++ b/app/index.html
@@ -102,7 +102,7 @@
             <div class="form-group">
               <label for="website-url" class="col-sm-2 control-label">Site URL</label>
               <div class="col-sm-10">
-                <input ng-model="main.url" type="text" class="form-control" id="website-url">
+                <input ng-model="main.url" type="text" class="form-control" id="website-url" required>
               </div>
             </div>
 
@@ -140,7 +140,7 @@
                     </label>
                   </div>
                 </div>
-                
+
               </div>
             </div>
             <div class="modal-footer">
@@ -164,13 +164,13 @@
         </div>
         <div class="modal-body">
 
-          <form class="form-horizontal">
+          <form class="form-horizontal" ng-submit="main.addGroup()">
 
             <!-- Group name form -->
             <div class="form-group">
               <label for="group-name" class="col-sm-3 control-label">Group name</label>
               <div class="col-sm-9">
-                <input type="text" class="form-control" id="group-name">
+                <input ng-model="main.name" type="text" class="form-control" id="group-name" required>
               </div>
             </div>
 
@@ -178,28 +178,25 @@
             <div class="form-group">
               <label for="group-color" class="col-sm-3 control-label">Group color</label>
               <div class="col-sm-9">
-                <select class="form-control" id="group-color">
-                  <option>- None -</option>
-                  <option>Red</option>
-                  <option>Green</option>
-                  <option>Blue</option>
-                  <option>Yellow</option>
-                  <option>Orange</option>
+                <select name="selectColor" id="selectColor" class="form-control" ng-model="main.color">
+                  <option value="">- None -</option>
+                  <option value="red">Red</option>
+                  <option value="green">Green</option>
+                  <option value="blue">Blue</option>
+                  <option value="yellow">Yellow</option>
+                  <option value="orange">Orange</option>
                 </select>
               </div>
             </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+              <button type="submit" class="btn btn-primary">Save changes</button>
+            </div>
           </form>
-
-
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
         </div>
       </div>
     </div>
   </div>
-
   <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
