Implement site adding to their groups using checkboxes

--- a/app/index.html
+++ b/app/index.html
@@ -45,7 +45,7 @@
             <button type="button" class="list-group-item">
               {{ group.name }}
               <span class="badge">
-                {{ group.length || 0 }}
+                {{ group.sites.length || 0 }}
               </span>
             </button>
           </div>
