Pull tab switching logic to functions

--- a/app/index.html
+++ b/app/index.html
@@ -34,7 +34,7 @@
       <!-- Website groups -->
       <section class="col-sm-4" id="groups">
         <div class="list-group">
-          <button type="button" class="list-group-item" ng-class="{ 'active':main.tab === 0}" ng-click="main.tab = 0">
+          <button type="button" class="list-group-item" ng-class="{ 'active':main.isSelected(0)}" ng-click="main.selectTab(0)">
           All websites
           <span class="badge">
             {{ main.sites.length }}
@@ -42,7 +42,7 @@
           </button>
           <!-- Show groups on the page and set tab value when clicked -->
           <div ng-repeat="group in main.groups">
-            <button type="button" class="list-group-item" ng-class="{ active:main.tab === group.id}" ng-click="main.tab = group.id">
+            <button type="button" class="list-group-item" ng-class="{ active:main.isSelected(group.id)}" ng-click="main.selectTab(group.id)">
               {{ group.name }}
               <span class="badge">
                 {{ group.sites.length || 0 }}
