Change button names to reflect their use

--- a/app/index.html
+++ b/app/index.html
@@ -80,8 +80,6 @@
             <td> <a href="#" class="button" ng-click="main.removeSite(site.url)">Delete</a></td>
           </tr>
         </table>
-        <button type="button" class="btn btn-default">Edit</button>
-        <button type="button" class="btn btn-danger">Delete</button>
       </section>
 
       <!-- Group table -->
@@ -97,8 +95,8 @@
             <td> <a href="#" class="button" ng-click="main.removeSite(site.url)">Delete</a></td>
           </tr>
         </table>
-        <button type="button" class="btn btn-default">Edit</button>
-        <button type="button" class="btn btn-danger">Delete</button>
+        <button type="button" class="btn btn-default">Edit Group</button>
+        <button type="button" class="btn btn-danger">Delete Group</button>
       </section>
 
     </section> <!-- /.row -->
