--- a/app/index.html
+++ b/app/index.html
@@ -83,16 +83,16 @@
       </section>
 
       <!-- Group table -->
-      <section class="col-sm-4" ng-hide="main.isSelected(0)">
+      <section class="col-sm-4" ng-hide="main.isSelected(0) || !main.groups[main.tab - 1].sites.length">
         <table class="table table-bordered">
           <tr>
             <th scope="col">URL</th>
             <th scope="col" colspan="2">Action</th>
           </tr>
           <tr ng-repeat="site in main.groups[main.tab - 1].sites">
-            <td> <a href="https://{{site.url}}/">{{ site }}</a></td>
+            <td> <a href="https://{{site}}/">{{ site }}</a></td>
             <td> <a href="#" class="button">Edit</a> </td>
-            <td> <a href="#" class="button" ng-click="main.removeSite(site.url)">Delete</a></td>
+            <td> <a href="#" class="button" ng-click="main.removeFromGroup(site)">Delete</a></td>
           </tr>
         </table>
         <button type="button" class="btn btn-default">Edit Group</button>
