Pull the logic for checking if a group has websites to a function

--- a/app/index.html
+++ b/app/index.html
@@ -83,7 +83,7 @@
       </section>
 
       <!-- Group table -->
-      <section class="col-sm-4" ng-hide="main.isSelected(0) || !main.groups[main.tab - 1].sites.length">
+      <section class="col-sm-4" ng-hide="main.isSelected(0) || !main.hasSites()">
         <table class="table table-bordered">
           <tr>
             <th scope="col">URL</th>
