--- a/app/index.html
+++ b/app/index.html
@@ -95,7 +95,7 @@
             <td> <a href="#" class="button" ng-click="main.removeFromGroupOnly(site)">Delete</a></td>
           </tr>
         </table>
-        <button type="button" class="btn btn-default">Edit Group</button>
+        <button type="button" class="btn btn-default" data-toggle="modal" data-target="#edit-group-modal" ng-click="main.setGroupToEdit(main.tab)">Edit Group</button>
         <button type="button" class="btn btn-danger" ng-click="main.removeGroup(main.tab - 1, main.groups[main.tab-1].name)">Delete Group</button>
       </section>
 
@@ -256,6 +256,50 @@
               <label for="group-color" class="col-sm-3 control-label">Group color</label>
               <div class="col-sm-9">
                 <select name="selectColor" id="selectColor" class="form-control" ng-model="main.color">
+                  <option value="">- None -</option>
+                  <option value="red">Red</option>
+                  <option value="green">Green</option>
+                  <option value="blue">Blue</option>
+                  <option value="yellow">Yellow</option>
+                  <option value="orange">Orange</option>
+                </select>
+              </div>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+              <button type="submit" class="btn btn-primary">Save changes</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Edit group modal -->
+  <div class="modal fade" id="edit-group-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title" id="myModalLabel">Edit group</h4>
+        </div>
+        <div class="modal-body">
+
+          <form class="form-horizontal">
+
+            <!-- Group name form -->
+            <div class="form-group">
+              <label for="group-name" class="col-sm-3 control-label">Group name</label>
+              <div class="col-sm-9">
+                <input ng-model="main.groupToEdit.name" type="text" class="form-control" id="group-name" required>
+              </div>
+            </div>
+
+            <!-- Group color form -->
+            <div class="form-group">
+              <label for="group-color" class="col-sm-3 control-label">Group color</label>
+              <div class="col-sm-9">
+                <select name="selectColor" id="selectColor" class="form-control" ng-model="main.groupToEdit.color">
                   <option value="">- None -</option>
                   <option value="red">Red</option>
                   <option value="green">Green</option>
