--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="app.css">
   <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
-<body ng-controller="MainController as main">
+<body ng-controller="AppController as app">
 
   <main class="container">
 
@@ -34,15 +34,15 @@
       <!-- Website groups -->
       <section class="col-sm-4" id="groups">
         <div class="list-group">
-          <button type="button" class="list-group-item" ng-class="{ 'active':main.isSelected(0)}" ng-click="main.selectTab(0)">
+          <button type="button" class="list-group-item" ng-class="{ 'active':app.isSelected(0)}" ng-click="app.selectTab(0)">
           All websites
           <span class="badge">
-            {{ main.sites.length }}
+            {{ app.sites.length }}
           </span>
           </button>
           <!-- Show groups on the page and set tab value when clicked -->
-          <div ng-repeat="group in main.groups">
-            <button type="button" class="list-group-item" ng-class="{ active:main.isSelected(group.id)}" ng-click="main.selectTab(group.id)">
+          <div ng-repeat="group in app.groups">
+            <button type="button" class="list-group-item" ng-class="{ active:app.isSelected(group.id)}" ng-click="app.selectTab(group.id)">
               {{ group.name }}
               <span class="badge">
                 {{ group.sites.length || 0 }}
@@ -57,7 +57,7 @@
       </section>
 
       <!-- "You have no websites" well -->
-      <section class="col-sm-4" ng-hide="main.sites.length">
+      <section class="col-sm-4" ng-hide="app.sites.length">
         <div class="well">
           You have no websites
           <button class="btn btn-primary" data-toggle="modal" data-target="#website-modal">
@@ -68,35 +68,35 @@
       </section>
 
       <!-- All websites table -->
-      <section class="col-sm-4" ng-show="main.sites.length && main.isSelected(0)">
+      <section class="col-sm-4" ng-show="app.sites.length && app.isSelected(0)">
         <table class="table table-bordered">
           <tr>
             <th scope="col">URL</th>
             <th scope="col" colspan="2">Action</th>
           </tr>
-          <tr ng-repeat="site in main.sites">
+          <tr ng-repeat="site in app.sites">
             <td> <a href="https://{{site.url}}/">{{ site.url }}</a></td>
-            <td> <a href="#" class="button" data-toggle="modal" data-target="#edit-website-modal" ng-click="main.setSiteToEdit($index)">Edit</a> </td>
-            <td> <a href="#" class="button" ng-click="main.removeSite(site.url)">Delete</a></td>
+            <td> <a href="#" class="button" data-toggle="modal" data-target="#edit-website-modal" ng-click="app.setSiteToEdit($index)">Edit</a> </td>
+            <td> <a href="#" class="button" ng-click="app.removeSite(site.url)">Delete</a></td>
           </tr>
         </table>
       </section>
 
       <!-- Group table -->
-      <section class="col-sm-4" ng-hide="main.isSelected(0) || !main.hasSites()">
+      <section class="col-sm-4" ng-hide="app.isSelected(0) || !app.hasSites()">
         <table class="table table-bordered">
           <tr>
             <th scope="col">URL</th>
             <th scope="col" colspan="2">Action</th>
           </tr>
-          <tr ng-repeat="site in main.groups[main.tab - 1].sites">
+          <tr ng-repeat="site in app.groups[app.tab - 1].sites">
             <td> <a href="https://{{site}}/">{{ site }}</a></td>
             <td> <a href="#" class="button">Edit</a> </td>
-            <td> <a href="#" class="button" ng-click="main.removeFromGroupOnly(site)">Delete</a></td>
+            <td> <a href="#" class="button" ng-click="app.removeFromGroupOnly(site)">Delete</a></td>
           </tr>
         </table>
-        <button type="button" class="btn btn-default" data-toggle="modal" data-target="#edit-group-modal" ng-click="main.setGroupToEdit(main.tab)">Edit Group</button>
-        <button type="button" class="btn btn-danger" ng-click="main.removeGroup(main.tab - 1, main.groups[main.tab-1].name)">Delete Group</button>
+        <button type="button" class="btn btn-default" data-toggle="modal" data-target="#edit-group-modal" ng-click="app.setGroupToEdit(app.tab)">Edit Group</button>
+        <button type="button" class="btn btn-danger" ng-click="app.removeGroup(app.tab - 1, app.groups[app.tab-1].name)">Delete Group</button>
       </section>
 
     </section> <!-- /.row -->
@@ -113,11 +113,11 @@
         <div class="modal-body">
 
           <!-- Website URL form -->
-          <form class="form-horizontal" ng-submit="main.addSite()">
+          <form class="form-horizontal" ng-submit="app.addSite()">
             <div class="form-group">
               <label for="website-url" class="col-sm-2 control-label">Site URL</label>
               <div class="col-sm-10">
-                <input ng-model="main.url" type="text" class="form-control" id="website-url" required>
+                <input ng-model="app.url" type="text" class="form-control" id="website-url" required>
               </div>
             </div>
 
@@ -125,7 +125,7 @@
             <div class="form-group">
               <label for="website-color" class="col-sm-2 control-label">Site color</label>
               <div class="col-sm-10">
-                <select name="selectColor" id="selectColor" class="form-control" ng-model="main.color">
+                <select name="selectColor" id="selectColor" class="form-control" ng-model="app.color">
                   <option value="">- None -</option>
                   <option value="red">Red</option>
                   <option value="green">Green</option>
@@ -137,16 +137,16 @@
             </div>
 
             <!-- Website group form -->
-            <div class="form-group" ng-show="main.groups.length">
+            <div class="form-group" ng-show="app.groups.length">
               <label for="pick-group" class="col-sm-2 control-label">Groups</label>
               <div class="col-sm-10" id="pick-group">
 
-                <div ng-repeat="group in main.groups">
+                <div ng-repeat="group in app.groups">
                   <div class="checkbox">
                     <label>
                       <input
                         type="checkbox"
-                        checklist-model="main.selectedGroups"
+                        checklist-model="app.selectedGroups"
                         checklist-value="group.name"
                       >
                       {{ group.name }}
@@ -182,7 +182,7 @@
             <div class="form-group">
               <label for="website-url" class="col-sm-2 control-label">Site URL</label>
               <div class="col-sm-10">
-                <input ng-model="main.siteToEdit.url" type="text" class="form-control" id="website-url" required>
+                <input ng-model="app.siteToEdit.url" type="text" class="form-control" id="website-url" required>
               </div>
             </div>
 
@@ -190,7 +190,7 @@
             <div class="form-group">
               <label for="website-color" class="col-sm-2 control-label">Site color</label>
               <div class="col-sm-10">
-                <select name="selectColor" id="selectColor" class="form-control" ng-model="main.siteToEdit.color">
+                <select name="selectColor" id="selectColor" class="form-control" ng-model="app.siteToEdit.color">
                   <option value="">- None -</option>
                   <option value="red">Red</option>
                   <option value="green">Green</option>
@@ -202,16 +202,16 @@
             </div>
 
             <!-- Website group form -->
-            <div class="form-group" ng-show="main.groups.length">
+            <div class="form-group" ng-show="app.groups.length">
               <label for="pick-group" class="col-sm-2 control-label">Groups</label>
               <div class="col-sm-10" id="pick-group">
 
-                <div ng-repeat="group in main.groups">
+                <div ng-repeat="group in app.groups">
                   <div class="checkbox">
                     <label>
                       <input
                         type="checkbox"
-                        checklist-model="main.siteToEdit.groups"
+                        checklist-model="app.siteToEdit.groups"
                         checklist-value="group.name"
                       >
                       {{ group.name }}
@@ -241,13 +241,13 @@
         </div>
         <div class="modal-body">
 
-          <form class="form-horizontal" ng-submit="main.addGroup()">
+          <form class="form-horizontal" ng-submit="app.addGroup()">
 
             <!-- Group name form -->
             <div class="form-group">
               <label for="group-name" class="col-sm-3 control-label">Group name</label>
               <div class="col-sm-9">
-                <input ng-model="main.name" type="text" class="form-control" id="group-name" required>
+                <input ng-model="app.name" type="text" class="form-control" id="group-name" required>
               </div>
             </div>
 
@@ -255,7 +255,7 @@
             <div class="form-group">
               <label for="group-color" class="col-sm-3 control-label">Group color</label>
               <div class="col-sm-9">
-                <select name="selectColor" id="selectColor" class="form-control" ng-model="main.color">
+                <select name="selectColor" id="selectColor" class="form-control" ng-model="app.color">
                   <option value="">- None -</option>
                   <option value="red">Red</option>
                   <option value="green">Green</option>
@@ -291,7 +291,7 @@
             <div class="form-group">
               <label for="group-name" class="col-sm-3 control-label">Group name</label>
               <div class="col-sm-9">
-                <input ng-model="main.groupToEdit.name" type="text" class="form-control" id="group-name" required>
+                <input ng-model="app.groupToEdit.name" type="text" class="form-control" id="group-name" required>
               </div>
             </div>
 
@@ -299,25 +299,25 @@
             <div class="form-group">
               <label for="group-color" class="col-sm-3 control-label">Group color</label>
               <div class="col-sm-9">
-                <select name="selectColor" id="selectColor" class="form-control" ng-model="main.groupToEdit.color">
+                <select name="selectColor" id="selectColor" class="form-control" ng-model="app.groupToEdit.color">
                   <option value="">- None -</option>
                   <option value="red">Red</option>
                   <option value="green">Green</option>
                   <option value="blue">Blue</option>
                   <option value="yellow">Yellow</option>
                   <option value="orange">Orange</option>
-                </select>
+                </select>star
               </div>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-              <button type="submit" class="btn btn-primary">Save changes</button>
             </div>
           </form>
         </div>
       </div>
     </div>
   </div>
+  {{app.data}}
   <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
